src/test/deca/context/valid/test_class_empty.deca
// Description:
//    Programme testant une class vide
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//   hello
//
// Historique:
//    cree le 20/01/2021

class A {

}
{
	println("hello");
}
